--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ padding-left:150px;
 
 }
 .portion .portion-one h1{
-    color:rgb(224, 41, 111);
+    color:#ed4b72;
     font-size: 45px;
     font-weight:800;
 }
@@ -50,7 +50,7 @@ padding-left:150px;
 .portion-one a{
     text-decoration:none;
     background-color:hsl(335, 80%, 63%);
-    background-image: linear-gradient(45deg,hsl(335, 80%, 63%),rgb(212, 14, 113));
+    background-image: linear-gradient(45deg, #ec4f8e,#ed4b72);
     padding:10px 20px;
     border-radius: 5px;
     color:white;
@@ -63,7 +63,7 @@ padding-left:150px;
 .second .portion .any a{
     text-decoration:none;
     background-color:hsl(335, 80%, 63%);
-    background-image: linear-gradient(45deg,hsl(335, 80%, 63%),rgb(212, 14, 113));
+    background-image: linear-gradient(45deg, #ec4f8e,#ed4b72);
     padding:10px 20px;
     border-radius: 5px;
     color:white;
@@ -107,7 +107,7 @@ padding-left:150px;
 }
 
 .third-extra .portion{
-    box-shadow: 10px 10px 60px;
+    box-shadow: 10px 10px 80px;
     height:400px;
     width:80%;
     background-color:lightgray;
@@ -153,6 +153,13 @@ padding-left:150px;
 .form button{
     background-color: lime;
 }
+.last{background-image: url("image/footer-bg.png");
+    height: 100vh;
+    background-size: cover;
+    background-position: bottom;
+    background-repeat: no repeat;
+
+}
 .last h3,h5,h6{
     text-align: center;
 }
@@ -174,6 +181,6 @@ padding-left:150px;
 }
 footer{
     text-align: center;
-    padding:40px;
+    padding:20px;
    color:rgb(126, 118, 118);
 }
